# test_stock

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile.app  PRODUCT.md  README.md  all_services.txt  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_live_trader.py  run_scheduler.bat  run_trader.bat  scheduler.py  start_dashboard.bat  start_dashboard.vbs  start_detached.py  start_paper_scheduler.vbs  tasks.txt
.obsidian/: workspace.json
ai/: README.md
api/: .env.example  README.md  __init__.py  kis_api_check.ipynb  kis_client.py  main.py  smoke_test.py
backend/: README.md  requirements.txt
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
data/: __init__.py
docs/: AGENT_HANDOFF_AUTOMATED_TRADING_2026-07-22.md  AUTOMATED_TRADING_CHANGE_MANIFEST_2026-07-22.md  AUTOMATED_TRADING_COMPLETION_MATRIX.md  AUTOMATED_TRADING_SYSTEM_DESIGN.md  FA.md  FA; Fundamental Analysis.md  FA_TA_STRATEGY.md  FA_전략.md  FA_점수체계_자동화_검증.ipynb  FA_학습가이드.md  NEXT_AGENT_RUNTIME_RECOVERY_PROMPT_2026-07-22.md  PAPER_RUNTIME_REPAIR_REPORT_2026-07-22.md  README.md  REMAINING_WORK_PACKET_2026-07-22.md  TA; Technical Analysis.md  WBS.md  WICS_DART 분석 초안.md  공시데이터 수집.md  요구사항.md  전체 프로젝트 폴더 구조.md  주식분석.md
etl/: README.md  message.md
frontend/: README.md
infra/: README.md
llm/: test.py
logs/: trader_audit.jsonl
mobile/: README.md
notebooks/: 브로커 핵심기능.ipynb  위험중립형_전략_백테스터_실행.ipynb  위험중립형_전략_백테스팅.ipynb
scripts/: run_scheduler.bat  run_trader.bat  start_dashboard.bat  start_paper_scheduler.vbs
(+845 files in other folders)
